Bug 688501 - Error: /invalidfont in --.type42execchar--
Summary: Error: /invalidfont in --.type42execchar--
Status: NOTIFIED FIXED
Alias: None
Product: Ghostscript
Classification: Unclassified
Component: PDF Interpreter (show other bugs)
Version: master
Hardware: PC Linux
: P3 normal
Assignee: Alex Cherepanov
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2006-01-19 12:36 UTC by Jason Giglio
Modified: 2008-12-19 08:31 UTC (History)
1 user (show)

See Also:
Customer:
Word Size: ---


Attachments
hack3inf.pdf simplified sample file (31.36 KB, application/pdf)
2006-01-25 21:23 UTC, Alex Cherepanov
Details
patch (435 bytes, patch)
2006-01-28 06:57 UTC, Alex Cherepanov
Details | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Jason Giglio 2006-01-19 12:36:28 UTC
gsc -sDEVICE=tiffsep -sOutputFile=/tmp/test -r30 -f /storage/archive/20259SIC322.pdf

AFPL Ghostscript CVS PRE-RELEASE 8.53 (2005-10-07)
Copyright (C) 2005 artofcode LLC, Benicia, CA.  All rights reserved.
This software comes with NO WARRANTY: see the file PUBLIC for details.
Processing pages 1 through 1.
Page 1
Error: /invalidfont in --.type42execchar--
Operand stack:
   --dict:7/7(L)--   --dict:12/12(ro)(L)--   237   iacute   116
Execution stack:
   %interp_exit   .runexec2   --nostringval--   --nostringval--  
--nostringval--   2   %stopped_push   --nostringval--   --nostringval--  
--nostringval--   false   1   %stopped_push   1   3   %oparray_pop   1   3  
%oparray_pop   1   3   %oparray_pop   --nostringval--   --nostringval--   2   1
  1   --nostringval--   %for_pos_int_continue   --nostringval--  
--nostringval--   --nostringval--   --nostringval--   %array_continue  
--nostringval--   false   1   %stopped_push   --nostringval--   %loop_continue 
 --nostringval--   %finish_show   --nostringval--   --nostringval--   10   11  
1   --nostringval--   (gs_show_enum)   %op_show_continue
Dictionary stack:
   --dict:1122/1686(ro)(G)--   --dict:2/20(G)--   --dict:75/200(L)--  
--dict:75/200(L)--   --dict:105/127(ro)(G)--   --dict:258/347(ro)(G)--  
--dict:21/24(L)--   --dict:4/6(L)--   --dict:20/31(L)--   --dict:4/5(L)--  
--dict:16/20(L)--
Current allocation mode is local
Last OS error: 2
AFPL Ghostscript CVS PRE-RELEASE 8.53: Unrecoverable error, exit code 1
Comment 1 Jason Giglio 2006-01-19 12:44:36 UTC
Created attachment 1936 [details]
Bad file
Comment 2 Alex Cherepanov 2006-01-19 14:15:23 UTC
Acrobat 5 cannot render the sample file either.
First, there's a white rectangle that obscures most of the view.
After removing the rectangle, one can see that the word maiz (with iacute,
( ma\355z) Tj ) is rendered as ma . After removing the offending character,
it's rendered as maz. Most likely the font is invalid.
Comment 3 Alex Cherepanov 2006-01-20 07:16:58 UTC
Acrobat Reader 6 and 7 show the word maiz correctly.
It looks like Ghostscript need one more hack in the font interpreter.
Comment 4 Ralph Giles 2006-01-25 09:52:34 UTC
fwiw, MacOS X Preview (Apple Quartz) renders this without complaining too.
Comment 5 Alex Cherepanov 2006-01-25 21:23:22 UTC
Created attachment 1953 [details]
hack3inf.pdf simplified sample file

The error is detected at ttinterp.c:3650 diring execution of
SHC instruction. I didn't figure out yet ehether this is a font or
interpreter bug.

Attached is a sample file most of unrelated objects removed.
Comment 6 Alex Cherepanov 2006-01-28 06:57:06 UTC
Created attachment 1966 [details]
patch

Following FreeType 2 implementation, ignore incorrect SHC command.

We don't have test cases that exercise this branch.
So the regression test detects no differences.
Comment 7 leonardo 2006-02-03 06:59:05 UTC
Please commit.
Comment 8 Alex Cherepanov 2006-02-03 19:58:47 UTC
The patch is committed in rev. 6559.