Following FreeType 2 implementation, ignore incorrect SHC command. Bug 688501

EXPECTED DIFFERENCES :
None

git-svn-id: http://svn.ghostscript.com/ghostscript/trunk@6559 a1074d23-0009-0410-80fe-cf8c14f379e6